	Fixed: Exception raised due to missing default value for domain.external_mail_dns_ids
	Fixed: When customer account is being disabled, FTP users must be also disabled
	Removed: OpenSSL configuration template file (replaced by /etc/imscp/openssl/openssl.cnf.tpl)

INSTALLER
	Fixed: Can't locate object method "setVersion" via package Servers::sqld::remote_server
	Fixed: Ensure that mysql service is enabled
	Fixed: Installer must die when server hostname is missconfigured
	Fixed: Missing 'use iMSCP::Crypt qw/decryptBlowfishCBC/' statement in Servers::sqld::remote_server
	Fixed: Missing 'use iMSCP::Execute qw/escapeShell/' statement in Servers::sqld::remote_server
	Fixed: Missing 'use iMSCP::TemplateParser' statement in Servers::sqld::remote_server
	Fixed: Overwrite any existing conflicting symlinks when enabling service (systemd)
	Fixed: Possible use of uninitialized value $sqlServer in autoinstaller/Adapter/DebianAdapter.pm
	Fixed: sysvinit scripts are not enabled when using systemd (regression fix)
	Fixed: Missing APT source repositories for i-MSCP required sections
	Updated: PhpMyAdmin addon installer to support PhpMyAdmin 4.5.x serie (require MySQL >= 5.5 and PHP >= 5.5)

SERVERS
	Added: SQLNegativeCache directive to cache negative responses from SQL lookups (ProFTPD)
	Added: SQLUserWhereClause directive to disallow FTP connection when FTP user status is not 'ok' (ProFTPD)
	Backported: VsFTPd server implementation from 1.3.x branch

YOUTRACK
 	IP-1367 Support for the VsFTPd server
	IP-1444 Ubuntu - Vsftpd package broken - libgcc_s.so.1 must be installed for pthread_cancel to work
	IP-1495 Domain alias with shared moint point fails

------------------------------------------------------------------------------------------------------------------------
1.2.14
------------------------------------------------------------------------------------------------------------------------

2016-02-25: Laurent Declercq
	RELEASE i-MSCP 1.2.14

FRONTEND