@@ -109,7 +109,7 @@
         <mysql_5.6
                 repository="http://repo.mysql.com/apt/debian/ wheezy mysql-5.6"
                 repository_key_id="0x8c718d3b5072e1f5"
-                repository_key_srv="pgp.mit.edu"
+                repository_key_srv="keyserver.ubuntu.com"
                 pinning_package="*"
                 pinning_pin="origin repo.mysql.com"
                 pinning_pin_priority="1001"
@@ -123,7 +123,7 @@
         <mysql_5.7
                 repository="http://repo.mysql.com/apt/debian/ wheezy mysql-5.7"
                 repository_key_id="0x8c718d3b5072e1f5"
-                repository_key_srv="pgp.mit.edu"
+                repository_key_srv="keyserver.ubuntu.com"
                 pinning_package="*"
                 pinning_pin="origin repo.mysql.com"
                 pinning_pin_priority="1001"
